src/test/ui/resolve/issue-39226.stderr
error[E0423]: expected value, found struct `Handle`
  --> $DIR/issue-39226.rs:20:17
   |
LL |         handle: Handle
   |                 ^^^^^^
   |                 |
   |                 did you mean `handle`?
   |                 did you mean `Handle { /* fields */ }`?

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0423"
